--- a/OurCodes/mapping/Path_finder.ipynb
+++ b/OurCodes/mapping/Path_finder.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "import math\n",
     "from shapely.geometry import Point\n",
@@ -61,33 +59,45 @@
     "\n",
     "def getDistance(node1, node2):\n",
     "    return math.sqrt( ((node1.x-node2.x)**2) + ((node1.y-node2.y)**2) )\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
     "import csv\n",
     "\n",
-    "file = open('node.csv', 'r')\n",
+    "file = open('BuildingPosition_noblanks.csv', 'r')\n",
     "data = csv.reader(file)\n",
     "\n",
     "node_list = []\n",
     "\n",
     "for line in data:\n",
-    "    new_node = node(line[0], int(line[1]), int(line[2]), int(line[3]), int(line[4]), int(line[5]))\n",
+    "    new_node = node(line[0], float(line[1]), float(line[2]), float(line[3]), float(line[4]), float(line[5]))\n",
     "    node_list.append(new_node)\n",
     "\n",
     "file.close()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1.58'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_19952/2486619704.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mnew_node\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mnode_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_node\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1.58'"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for n in node_list:\n",
     "    for n_1 in node_list:\n",
@@ -134,15 +144,13 @@
     "            n.add_node((n_1, round(distance,2)))\n",
     "    \n",
     "    n.approachable.sort(key = lambda x: x[0].tag)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 185,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "node_list.sort(key = lambda x: x.tag)\n",
     "writable_lists = []\n",
@@ -157,13 +165,15 @@
     "        writable_list.append(('Z', source.z))\n",
     "        writable_lists.append(writable_list)\n",
     "    "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "with open('node_map.csv', 'w', newline='') as file:\n",
     "    fieldnames = ['Source', 'Dest', 'Dist', 'X', 'Y', 'Z']\n",
@@ -174,21 +184,22 @@
     "    for obj in writable_lists:\n",
     "        toDict = dict(obj)\n",
     "        writer.writerow(toDict)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -201,6 +212,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
