--- a/OurCodes/mapping/Path_finder.ipynb
+++ b/OurCodes/mapping/Path_finder.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import math\n",
     "from shapely.geometry import Point\n",
@@ -28,8 +30,8 @@
     "\n",
     "def checkRange(node1, node2, node3):\n",
     "    rect = []\n",
-    "    x_cord = [node3.x - node3.w, node3.x + node3.w]\n",
-    "    y_cord = [node3.y - node3.h, node3.y + node3.h]\n",
+    "    x_cord = [node3.x - 0.5*node3.w, node3.x + 0.5*node3.w]\n",
+    "    y_cord = [node3.y - 0.5*node3.h, node3.y + 0.5*node3.h]\n",
     "    \n",
     "    for x in x_cord:\n",
     "        for y in y_cord:\n",
@@ -54,18 +56,30 @@
     "    if poly1.intersects(poly2):\n",
     "        return True\n",
     "    \n",
+    "    p1 = (n1.x - drone_width, n1.y + drone_width)\n",
+    "    p2 = (n1.x + drone_width, n1.y - drone_width)\n",
+    "    p3 = (n2.x - drone_width, n2.y + drone_width)\n",
+    "    p4 = (n2.x + drone_width, n2.y - drone_width)\n",
+    "    \n",
+    "    poly1 = Polygon([p1, p2, p3, p4])\n",
+    "    \n",
+    "    poly2 = Polygon(rect)\n",
+    "    \n",
+    "    if poly1.intersects(poly2):\n",
+    "        return True\n",
+    "    \n",
     "    return False\n",
     "        \n",
     "\n",
     "def getDistance(node1, node2):\n",
     "    return math.sqrt( ((node1.x-node2.x)**2) + ((node1.y-node2.y)**2) )\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -79,13 +93,13 @@
     "    node_list.append(new_node)\n",
     "\n",
     "file.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for n in node_list:\n",
     "    for n_1 in node_list:\n",
@@ -100,19 +114,30 @@
     "        for n_2 in node_list:\n",
     "            if n_2 == n_1 or n_2 == n:\n",
     "                continue\n",
-    "             \n",
+    "            \n",
     "            is_blocked = checkRange(n, n_1, n_2)  \n",
     "            \n",
-    "            if is_blocked:   \n",
+    "            if is_blocked:\n",
+    "                if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                    print(n_2.tag)   \n",
     "                # If lower/equalto both buildings, it is not blocking\n",
     "                if n_2.z < n.z and n_2.z <= n_1.z:\n",
+    "                    if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                        print(n_2.tag + \"  a\")   \n",
     "                    is_blocked = False\n",
     "                    \n",
     "                # If higher than both buildings, it is blocked\n",
     "                elif n_2.z > n.z and n_2.z > n_1.z:\n",
+    "                    if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                        print(n_2.tag + \"  b\")   \n",
     "                    break;          \n",
     "                    \n",
     "                else:\n",
+    "                    if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                        print(n_2.tag + \"  d\")\n",
+    "                        print(n.z)\n",
+    "                        print(n_1.z)\n",
+    "                        print(n_2.z)   \n",
     "                    if n.z <= n_1.z:\n",
     "                        low = n\n",
     "                        high = n_1\n",
@@ -124,21 +149,27 @@
     "                    poly = Polygon([(low.x, low.z), (high.x, low.z), (high.x, high.z)])\n",
     "                    \n",
     "                    if poly.contains(Point(n_2.x, n_2.z)):\n",
+    "                        if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                            print(n_2.tag + \"  e\")   \n",
     "                        is_blocked = False\n",
-    "                    else: \n",
+    "                    else:\n",
+    "                        if n.tag == \"E1A\" and n_1.tag == \"A2\":\n",
+    "                            print(n_2.tag + \"  f\")    \n",
     "                        break;\n",
     "\n",
     "        if not is_blocked:\n",
     "            n.add_node((n_1, round(distance,2)))\n",
     "    \n",
     "    n.approachable.sort(key = lambda x: x[0].tag)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "node_list.sort(key = lambda x: x.tag)\n",
     "writable_lists = []\n",
@@ -153,15 +184,13 @@
     "        writable_list.append(('Z', source.z))\n",
     "        writable_lists.append(writable_list)\n",
     "    "
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with open('node_map.csv', 'w', newline='') as file:\n",
     "    fieldnames = ['Source', 'Dest', 'Dist', 'X', 'Y', 'Z']\n",
@@ -172,22 +201,23 @@
     "    for obj in writable_lists:\n",
     "        toDict = dict(obj)\n",
     "        writer.writerow(toDict)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,9 +230,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
