--- a/OurCodes/flying/DataVis/Alvin_Datavis.ipynb
+++ b/OurCodes/flying/DataVis/Alvin_Datavis.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "# load all data\n",
     "\n",
-    "import os\n",
+    "import os]\n",
     "os.chdir(\"..\")\n",
     "# key = path\n",
     "data = {}\n",
