--- a/OurCodes/flying/DataVis/Alvin_Datavis.ipynb
+++ b/OurCodes/flying/DataVis/Alvin_Datavis.ipynb
@@ -173,16 +173,13 @@
     "\n",
     "\n",
     "# idea 2\n",
-    "# total travel distance vs battery percentage drop(calculated using percentage early - percentage in the end)\n",
-    "\n",
+    "# total travel distance vs battery percentage drop(calculated using percentage early - percentage in the end\n",
     "\n",
     "# idea 3 \n",
     "# wind speed vs battery percentage/voltage drop\n",
     "\n",
     "# idea 4\n",
     "# wind direction vs battery percentage/voltage drop\n",
-    "\n",
-    "\n",
     "\n",
     "# idea 6\n",
     "# show how lower starting battery affect the battery level in the end."
